--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <title> Socket.io Streaming Example </title>
   </head>
   <body>
-    <h1> Socket.io Streaming Example </h1>
+    <!-- <h1> Socket.io Video Chat Prototype </h1>
     <button id="start-stream"> Start streaming </button>
-    <audio controls></audio>
+    <audio controls></audio> -->
+    <div id="join-room">
+      <h2> Create or join room </h2>
+      <input id="room-input">
+      <button id="join-room-btn"> Submit </button>
+    </div>
+    <div id="room-joined">
+      <h2 id="room-name"></h2>
+      <span id="users-in-room"></span>
+    </div>
     <script src="/bundle.js"></script>
   </body>
 </html>
