--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div id="room-joined">
       <h2 id="room-name"></h2>
       <span id="users-in-room"></span>
+      <br>
+      <button id="leave-room"> Leave </button>
     </div>
     <script src="/bundle.js"></script>
   </body>
