starting prototype video call

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> WebRTC </title>
     <style>
-      .video {
-        max-height: 200px;
+      video {
+        height: 300px;
       }
     </style>
   </head>
@@ -39,8 +39,7 @@
       <button id="hang-up-button"> Hang up </button>
       <br>
       <br>
-      <video autoplay id="local-video" class="video"></video>
-      <video autoplay id="remote-video" class="video"></video>
+      <video autoplay id="local-video"></video>
     </div>
 
     <script src="/bundle.js"></script>
