worked out some kinks

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       .local-video {
         height: 80px;
         left: 260px;
-        top: 20px;
+        bottom: 20px;
         width: 120px;
       }
     </style>
@@ -37,6 +37,8 @@
         <video autoplay id="remote-video" class="remote-video"></video>
         <video autoplay id="local-video" class="local-video"></video>
       </div>
+      <button id="toggle-video"> Toggle Video </button>
+      <button id="toggle-sound"> Toggle Sound </button>
       <br>
       <br>
       <button id="test-video-button"> Test video </button>
